--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
 
 /* banner section  */
 .banner {
-    background-image: url(/shelly/images/carousel-1.jpg);
+    background-image: url(./images/carousel-1.jpg);
     background-size: cover;
     background-position: center;
     text-align: center;
